fixed row alignment issues

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -17,7 +17,7 @@
 }
 
 @media screen and (max-width: 830px){
-    .row {
+    .row-about {
         display: grid;
     }
 }
